[gd_scene load_steps=12 format=3 uid="uid://c7iwvbn60xokx"]

[ext_resource type="Texture2D" uid="uid://iwd3uobibsu3" path="res://Base/Shop/Shop.png" id="1_5jq5m"]
[ext_resource type="Texture2D" uid="uid://bptr6byvokmow" path="res://Base/Money.png" id="2_b7ku5"]
[ext_resource type="LabelSettings" uid="uid://ij0ls7r7u6aq" path="res://Global Style/Label Style - Outline Size16.tres" id="3_cf11s"]
[ext_resource type="Script" path="res://Base/Shop/Money.gd" id="4_583v2"]
[ext_resource type="Script" path="res://Base/Shop/Reputation.gd" id="5_2j6yo"]
[ext_resource type="Texture2D" uid="uid://ues24mh5krya" path="res://Base/Shop/Reputation.png" id="6_tgyec"]
[ext_resource type="StyleBox" uid="uid://dccupfiusww5a" path="res://Global Style/ProgressBar Style - Background.tres" id="7_emliw"]
[ext_resource type="StyleBox" uid="uid://cpmrxg5w8c1kw" path="res://Global Style/ProgressBar Style - Fill.tres" id="8_i15fu"]
[ext_resource type="PackedScene" uid="uid://dxewdcl3yp1eo" path="res://Base/Shop/Order.tscn" id="9_5vvy2"]
[ext_resource type="Script" path="res://Base/Shop/Queue.gd" id="10_tot0t"]
[ext_resource type="Script" path="res://Base/Shop/Alien/Alien Body Sprite Manager.gd" id="11_kj2la"]

[node name="Shop" type="SubViewport"]
handle_input_locally = false
size = Vector2i(384, 256)
render_target_update_mode = 4

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_5jq5m")
centered = false

[node name="Top Bar" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Top Bar"]
layout_mode = 2

[node name="Money" type="HBoxContainer" parent="Top Bar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="Top Bar/HBoxContainer/Money"]
layout_mode = 2
texture = ExtResource("2_b7ku5")
expand_mode = 2

[node name="Label" type="Label" parent="Top Bar/HBoxContainer/Money"]
layout_mode = 2
text = "0"
label_settings = ExtResource("3_cf11s")
script = ExtResource("4_583v2")

[node name="Reputation" type="HBoxContainer" parent="Top Bar/HBoxContainer"]
layout_mode = 2
script = ExtResource("5_2j6yo")

[node name="TextureRect" type="TextureRect" parent="Top Bar/HBoxContainer/Reputation"]
layout_mode = 2
texture = ExtResource("6_tgyec")
expand_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="Top Bar/HBoxContainer/Reputation"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = ExtResource("7_emliw")
theme_override_styles/fill = ExtResource("8_i15fu")
step = 1.0
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="Top Bar/HBoxContainer/Reputation/ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "50"
label_settings = ExtResource("3_cf11s")
horizontal_alignment = 1

[node name="Order" parent="." instance=ExtResource("9_5vvy2")]
offset_left = 62.0
offset_top = 36.0
offset_right = 369.0
offset_bottom = 196.0

[node name="Queue" type="Node2D" parent="."]
position = Vector2(110, 256)
script = ExtResource("10_tot0t")

[node name="Spawn Timer" type="Timer" parent="Queue"]

[node name="Alien Body Sprite Manager" type="Timer" parent="Queue"]
script = ExtResource("11_kj2la")

[connection signal="tree_entered" from="Top Bar/HBoxContainer/Money/Label" to="Top Bar/HBoxContainer/Money/Label" method="_on_tree_entered"]
[connection signal="tree_entered" from="Top Bar/HBoxContainer/Reputation" to="Top Bar/HBoxContainer/Reputation" method="_on_tree_entered"]
[connection signal="child_entered_tree" from="Queue" to="Queue" method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="Queue" to="Queue" method="_on_child_exiting_tree"]
[connection signal="child_order_changed" from="Queue" to="Queue" method="_on_child_order_changed"]
